chore: Add Typescript Setting

--- a/package.json
+++ b/package.json
@@ -2,11 +2,27 @@
   "name": "useful-decorator",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
+    "build": "yarn tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:byungJin-lee/useful-decorator.git"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./lib/cjs/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "author": "byungjin.dev@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "typescript": "^5.0.2"
+  }
 }
