--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,10 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "lib": [
-      "es5",
-      "es6",
-      "dom"
-    ],
+    "lib": ["es5", "es6", "dom"],
     "declaration": true,
     "outDir": "dist",
-    "strict": true,
+    "strict": true
   },
-  "include": [
-    "./lib/esm/index.ts"
-  ]
+  "include": ["./lib/esm/index.ts"]
 }
