--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "prepack": "yarn build",
-    "build": "yarn tsc",
+    "prepack": "npm run build",
+    "build": "npm run clear && npm run build:tsc && npm run build:esbuild",
+    "build:tsc": "npx tsc --emitDeclarationOnly",
+    "build:esbuild": "node build.js",
+    "clear": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
