chore: Add Package Include Files

--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./lib/cjs/index.cjs",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "author": "byungjin.dev@gmail.com",
   "license": "MIT",
   "devDependencies": {
